syntax = "proto3";

package loms_v1;

option go_package = "gitlab.ozon.dev/kaktusv6/Homework/pkg/loms_v1;loms_v1";

import "google/protobuf/empty.proto";

service LomsV1 {
  rpc CreateOrder(OrderDataRequest) returns (OrderID);
  rpc ListOrder(OrderID) returns (OrderResponse);
  rpc OrderPayed(OrderID) returns (google.protobuf.Empty);
  rpc CancelOrder(OrderID) returns (google.protobuf.Empty);
  rpc Stocks(StocksRequest) returns (StocksResponse);
}

message StocksRequest {
  uint32 sku = 1;
}

message Stock {
  int64 warehouse_id = 1;
  uint64 count = 2;
}

message StocksResponse {
  repeated Stock stocks = 1;
}

message OrderDataRequest {
  int64 user = 1;
  repeated ItemInfo items = 2;
}

message ItemInfo {
  uint32 sku = 1;
  int32 count = 2;
}

message OrderID {
  int64 order_id = 1;
}

enum Status {
  new = 0;
  awaiting_payment = 1;
  failed = 2;
  payed = 3;
  cancelled = 4;
}

message OrderResponse {
  Status status = 1;
  int64 user = 2;
  repeated ItemInfo items = 3;
}
